Style section three of body and fix spacing of section one and header

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
 
 body {
     height: 100vh;
@@ -15,8 +15,9 @@ body {
     font-size: 24px;
     font-weight: bold;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 200px;
     padding: 8px 32px;
 }
 
@@ -44,7 +45,7 @@ a {
     background-color: #1F2937;
     color: #F9FAF8;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 128px 32px;
     gap: 32px;
 }
@@ -58,12 +59,14 @@ img.one {
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
+    width: 350px;
 }
 
 .description-one {
     font-size: 18px;
     color: #E5E7EB;
     margin-bottom: 8px;
+    width: 350px;
 }
 
 button.one {
@@ -114,4 +117,29 @@ img.two {
     text-align: center;
     width: 150px;
     color: #1F2937;
+}
+
+.slice-three {
+    background-color: #E5E7EB;
+    padding: 64px 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+    width: 660px;
+}
+
+.author {
+    margin-right: 32px;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: bold;
+    display: flex;
+    justify-content: flex-end;
 }
